<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/this_is_the_survey_taker_application_written_by_"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/txtAuthors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAbout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/alan_lee_david_baik_meng_zhao"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtAuthors"
        android:text="@string/loading" />

</RelativeLayout>